[package]
name = "newoneblog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1", features = ["static-files"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
log = "0.4"
log-mdc = "0.1.0"
log4rs = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
