[package]
name = "newoneblog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1", features = ["static-files"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
log = "0.4"
log-mdc = "0.1.0"
log4rs = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
markdown = "1.0.0-alpha.16"
tera = "1.19.1"
lazy_static = "1.4.0"
pinyin = "0.10"
fs_extra = "1.3.0"